--- a/style.css
+++ b/style.css
@@ -6,10 +6,21 @@
 html, body {
 	height: 100%;
 	margin: 0;
+	overflow: hidden;
 }
 
 #container {
 	height: 100%;
 	width: 100%;
 	/*border: 1px solid black;*/
+}
+
+circle {
+	fill: black ;
+}
+
+#feedback {
+	position: fixed;
+	bottom: 0px;
+	right: 0px;
 }
